add component Files (Django)

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -35,3 +35,4 @@ django-import-export = "*"
 drf-spectacular = "~=0.25.1"
 cb-django-articles = {editable = true, path = "./modules/django_articles"}
 cb-django-2fa = {editable = true, path = "./modules/django_2fa"}
+cb-django-files = {editable = true, path = "./modules/django_files"}
